FIX: in method PostingList.sort, an unmodifiable list was returned, but it was a problem, in fact sorting was used during indexing